# tgd-badge

./: .gitignore  AGENTS.md  PRD.md  README.md  REVIEW.md  SPEC.md  TASKS.md  TEST-REPORT.md  pyproject.toml
src/tgd_badge/: __init__.py  __main__.py  badge.py  cli.py  colors.py
tests/: test_badge.py  test_cli.py  test_colors.py
