[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tgd-badge"
version = "1.0.0"
description = "SVG badge generator for the tGD ecosystem"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"

[project.scripts]
tgd-badge = "tgd_badge.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
